--- a/aula03.html
+++ b/aula03.html
@@ -30,5 +30,9 @@
             <dd>Jogos onde tem que sobreviver</dd>
         </div>
     </dl>
+    <table>
+        <td><tr>aaa</tr></td>
+        <td><tr>aaaaa</tr></td>
+    </table>
 </body>
 </html>
