Tabela feita dentro do arquivo tabela.html

--- a/tabela.html
+++ b/tabela.html
@@ -4,8 +4,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCC 121 Tabelas</title>
+    <style> 
+    </style>
 </head>
 <body>
     <h1>DCC121 Tabelas</h1>
+    <table>
+            <tr>
+                <th>Titulo</th>
+                <th>Titulo</th>
+                <th>Titulo</th>
+                <th>Titulo</th>
+            </tr>
+            <tbody>
+            <tr>
+                <td>Nome</td>
+                <td>Idade</td>
+                <td>Email</td>
+                <td>Cargo</td>
+            </tr>
+            <tr>
+                <td>Nome</td>
+                <td>Idade</td>
+                <td>Email</td>
+                <td>Cargo</td>
+            </tr>
+            <tr>
+                <td>Nome</td>
+                <td>Idade</td>
+                <td>Email</td>
+                <td>Cargo</td>
+            </tr>
+        </tbody> 
+        <tfoot>
+            <td>Aprovado</td>
+            <td>Reprovado</td>
+            <td>Aprovado</td>
+            <td>Desclassificado</td>
+        </tfoot>   
+    </table>
+    <h1>Exemplo 2</h1>
+    <table>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td rowspan="3">4</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td colspan="3" rowspan="2">6</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>15</td>
+        </tr> 
+        <tr>
+            <td>16</td>
+            <td>17</td>
+            <td>18</td>
+            <td>19</td>
+            <td>20</td>  
+        </tr>  
+    </table>
 </body>
 </html>
